docs/sf-export/sfdx-raw/objects/RAMS_Settings__c/RAMS_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>RAM Settings</label>
</CustomObject>