docs/sf-export/sfdx-raw/objects/RAMS_Settings__c/fields/Affiliate_ID__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_ID__c</fullName>
    <label>Affiliate ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>