docs/sf-export/sfdx-raw/objects/RAMS_Settings__c/fields/APIKey__c.field-meta.xml
<CustomField>
    <fullName>APIKey__c</fullName>
    <label>APIKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>