docs/sf-export/sfdx-raw/objects/RAMS_Settings__c/fields/Fee_Split_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Fee_Split_Group_ID__c</fullName>
    <label>Fee Split Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>